flexsdk/modules/asc/test/compiler/as3/LocalizedErrors/1084-ExpectTokenBeforeErr.err
[Compiler] Error #1084: Syntax error: expecting leftparen before fact.
   1084-ExpectTokenBeforeErr.as, Ln 8, Col 4:
if fact > 2 {
...^
[Compiler] Error #1084: Syntax error: expecting identifier before var.
   1084-ExpectTokenBeforeErr.as, Ln 9, Col 2:
var bigger:Boolean = true;
.^
[Compiler] Error #1084: Syntax error: expecting colon before rightbrace.
   1084-ExpectTokenBeforeErr.as, Ln 10, Col 1:
}
^
[Compiler] Error #1084: Syntax error: expecting identifier before rightbrace.
   1084-ExpectTokenBeforeErr.as, Ln 10, Col 1:
}
^
[Compiler] Error #1084: Syntax error: expecting rightparen before end of program.
   1084-ExpectTokenBeforeErr.as, Ln 11, Col 1:
[Compiler] Error #1084: Syntax error: expecting identifier before end of program.
   1084-ExpectTokenBeforeErr.as, Ln 11, Col 1:
6 errors found
