flexsdk/modules/asc/test/compiler/as3/LocalizedErrors/1084-ExpectTokenBeforeErr.as
/*

  Error: 1084 Expecting _ before _  

*/

var fact:int = 1 * 2 * 3;
if fact > 2 {
	var bigger:Boolean = true;
}